--- a/VueTest/05_条件渲染/test.html
+++ b/VueTest/05_条件渲染/test.html
@@ -4,7 +4,7 @@
  * @Autor: HWK
  * @Date: 2020-03-17 12:44:06
  * @LastEditors: HWK
- * @LastEditTime: 2020-03-23 22:29:17
+ * @LastEditTime: 2020-04-10 22:32:02
  -->
 <!DOCTYPE html>
 <html lang="en">
@@ -29,6 +29,7 @@
   <hr>
   <p v-show="ok">求婚成功</p>
   <p v-show="!ok">求婚失败</p>
+  <button></button>
 
   <button @click="ok=!ok">切换</button>
 </div>
