--- a/VueTest/02_模板语法/test.html
+++ b/VueTest/02_模板语法/test.html
@@ -4,7 +4,7 @@
  * @Autor: HWK
  * @Date: 2020-03-17 12:44:06
  * @LastEditors: HWK
- * @LastEditTime: 2020-03-23 21:29:00
+ * @LastEditTime: 2020-04-10 22:52:21
  -->
 <!DOCTYPE html>
 <html lang="en">
@@ -50,7 +50,7 @@
   <h2>3. 指令二: 绑定事件监听</h2>
   <button v-on:click="test">点我</button>
   <button @click="test">点我</button>
-
+  <!-- 第二次尝试修改 -->
 </div>
 
 
