--- a/VueSource/05_模板解析_一般指令.html
+++ b/VueSource/05_模板解析_一般指令.html
@@ -1,3 +1,10 @@
+<!--
+ * @Description: 
+ * @Autor: HWK
+ * @Date: 2020-04-11 20:18:17
+ * @LastEditors: HWK
+ * @LastEditTime: 2020-04-13 22:37:23
+ -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -16,6 +23,7 @@
 <div id="test">
   <p v-text="msg"></p>
   <p v-html="msg"></p>
+  <!-- bClass为静态class属性值  v-class为动态属性值 -->
   <p class="bClass" v-class="myClass">xxxxxx</p>
 </div>
 
