--- a/VueSource/02_数据代理_vue.html
+++ b/VueSource/02_数据代理_vue.html
@@ -1,25 +1,33 @@
+<!--
+ * @Description: 
+ * @Autor: HWK
+ * @Date: 2020-04-11 20:18:17
+ * @LastEditors: HWK
+ * @LastEditTime: 2020-04-15 09:53:46
+ -->
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>02_数据代理_vue</title>
 </head>
+
 <body>
 
-<div id="test"></div>
-<script type="text/javascript" src="js/vue.js"></script>
-<script type="text/javascript">
-  const vm = new Vue({
-    el: "#test",
-    data: {
-      name: '张三'
-    }
-  })
-  console.log(vm.name)  // 读取的是data中的name,  vm代理对data的读操作
-  vm.name = '李四' // 数据保存到data中的name上, vm代理对data的写操作
-  console.log(vm.name, vm._data.name)
-
-
-</script>
+  <div id="test"></div>
+  <script type="text/javascript" src="js/vue.js"></script>
+  <script type="text/javascript">
+    const vm = new Vue({
+      el: "#test",
+      data: {
+        name: '张三'
+      }
+    })
+    console.log(vm.name) // 读取的是data中的name,  vm代理对data的读操作
+    vm.name = '李四' // 数据保存到data中的name上, vm代理对data的写操作
+    console.log(vm.name, vm._data.name)
+  </script>
 </body>
+
 </html>
